--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "pg": "^8.7.1"
   },
   "scripts": {
-    "dev": "nodemon workshop/server.js -L --ignore **/db.json",
-    "start": "node stretch-solution/server.js"
+    "dev": "nodemon server.js -L --ignore **/db.json",
+    "start": "node server.js"
   },
   "name": "aim-at-mario-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/WebAhead12/Aim-At-Mario-Backend.git"
