--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -8,7 +9,7 @@
   },
   "scripts": {
     "dev": "nodemon server.js -L --ignore **/db.json",
-    "start": "node server.js"
+    "start": "node server.js -L"
   },
   "name": "aim-at-mario-backend",
   "version": "1.0.0",
