--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -8,7 +9,7 @@
     "pg": "^8.7.1"
   },
   "scripts": {
-    "dev": "nodemon server.js -L --ignore **/db.json",
+    "dev": "nodemon server.js ",
     "start": "node server.js -L"
   },
   "name": "aim-at-mario-backend",
